@@ -29,7 +29,6 @@ public class TelaCustoPanel extends JPanel {
     private DefaultTableModel tableModel;
 
     private final CustoService custoService;
-
     private MaskFormatter dateFormatter;
 
     public TelaCustoPanel(CustoService custoService) {
@@ -68,10 +67,14 @@ public class TelaCustoPanel extends JPanel {
         gbc.gridx = 1; gbc.weightx = 0.3;
         formPanel.add(txtId, gbc);
 
-        // Imposto e Custo Variável (linha 1)
+        // Imposto e Custo Variável
         gbc.gridx = 0; gbc.gridy = 1; gbc.weightx = 0;
-        formPanel.add(new JLabel("Imposto:*"), gbc);
-        txtImposto = new JTextField();
+        formPanel.add(new JLabel("Imposto (Automático):"), gbc);
+        txtImposto = new JTextField("15%");
+        txtImposto.setEditable(false);
+        txtImposto.setBackground(new Color(240, 240, 240));
+        txtImposto.setForeground(new Color(0, 102, 0));
+        txtImposto.setHorizontalAlignment(SwingConstants.CENTER);
         gbc.gridx = 1; gbc.weightx = 0.3;
         formPanel.add(txtImposto, gbc);
 
@@ -81,7 +84,7 @@ public class TelaCustoPanel extends JPanel {
         gbc.gridx = 3; gbc.weightx = 0.3;
         formPanel.add(txtCustoVariavel, gbc);
 
-        // Custo Fixo e Margem Lucro (linha 2)
+        // Custo Fixo e Margem Lucro
         gbc.gridx = 0; gbc.gridy = 2; gbc.weightx = 0;
         formPanel.add(new JLabel("Custo Fixo:*"), gbc);
         txtCustoFixo = new JTextField();
@@ -94,7 +97,14 @@ public class TelaCustoPanel extends JPanel {
         gbc.gridx = 3; gbc.weightx = 0.3;
         formPanel.add(txtMargemLucro, gbc);
 
-        // Data Processamento (linha 3)
+        // Listener para atualizar imposto automaticamente
+        txtMargemLucro.getDocument().addDocumentListener(new javax.swing.event.DocumentListener() {
+            public void insertUpdate(javax.swing.event.DocumentEvent e) { atualizarImposto(); }
+            public void removeUpdate(javax.swing.event.DocumentEvent e) { atualizarImposto(); }
+            public void changedUpdate(javax.swing.event.DocumentEvent e) { atualizarImposto(); }
+        });
+
+        // Data Processamento
         gbc.gridx = 0; gbc.gridy = 3; gbc.weightx = 0;
         formPanel.add(new JLabel("Data Processamento:*"), gbc);
         txtDataProcessamento = new JFormattedTextField();
@@ -102,7 +112,7 @@ public class TelaCustoPanel extends JPanel {
         gbc.gridx = 1; gbc.weightx = 0.3;
         formPanel.add(txtDataProcessamento, gbc);
 
-        // Botões (linha 4)
+        // Botões
         JPanel buttonPanel = new JPanel(new FlowLayout(FlowLayout.RIGHT));
         btnSalvar = new JButton("💾 Salvar");
         btnExcluir = new JButton("🗑️ Excluir");
@@ -118,9 +128,24 @@ public class TelaCustoPanel extends JPanel {
 
         gbc.gridx = 0; gbc.gridy = 4; gbc.gridwidth = 4;
         formPanel.add(buttonPanel, gbc);
-        gbc.gridwidth = 1;
 
         add(formPanel, BorderLayout.NORTH);
+    }
+
+    private void atualizarImposto() {
+        try {
+            double margem = Double.parseDouble(txtMargemLucro.getText().trim().replace(",", "."));
+            if (margem > 0) {
+                txtImposto.setText("15%");
+                txtImposto.setForeground(new Color(0, 102, 0));
+            } else {
+                txtImposto.setText("0%");
+                txtImposto.setForeground(Color.RED);
+            }
+        } catch (NumberFormatException e) {
+            txtImposto.setText("---");
+            txtImposto.setForeground(Color.GRAY);
+        }
     }
 
     private void criarTabela() {
@@ -129,170 +154,110 @@ public class TelaCustoPanel extends JPanel {
             @Override public boolean isCellEditable(int r, int c) { return false; }
         };
         table = new JTable(tableModel);
-
         JTableHeader header = table.getTableHeader();
         header.setFont(new Font("Arial Black", Font.BOLD, 12));
         header.setForeground(Color.BLACK);
-        header.setPreferredSize(new Dimension(header.getWidth(), 25));
-
-        table.getSelectionModel().addListSelectionListener(e -> {
-            if (!e.getValueIsAdjusting()) preencherFormulario();
-        });
-
-        JScrollPane scrollPane = new JScrollPane(table);
-        add(scrollPane, BorderLayout.CENTER);
+        add(new JScrollPane(table), BorderLayout.CENTER);
     }
 
     private void atualizarTabela() {
         new SwingWorker<List<CustoResponse>, Void>() {
-            @Override
-            protected List<CustoResponse> doInBackground() throws Exception {
-                return custoService.listAll();
-            }
-
-            @Override
-            protected void done() {
+            @Override protected List<CustoResponse> doInBackground() { return custoService.listAll(); }
+            @Override protected void done() {
                 try {
                     List<CustoResponse> list = get();
                     tableModel.setRowCount(0);
-                    DateTimeFormatter fmt = DateTimeFormatter.ofPattern("dd/MM/yyyy");
-
                     for (CustoResponse r : list) {
                         tableModel.addRow(new Object[]{
                                 r.id(),
-                                r.imposto(),
-                                r.custoVarivel(),
+                                String.format("%.0f%%", r.imposto() * 100),
+                                r.custoVariavel(),
                                 r.custoFixo(),
                                 r.margemLucro(),
                                 r.dataProcessamento()
                         });
                     }
                 } catch (Exception e) {
-                    JOptionPane.showMessageDialog(
-                            TelaCustoPanel.this,
-                            "Erro ao buscar custos: " + e.getMessage(),
-                            "Erro",
-                            JOptionPane.ERROR_MESSAGE
-                    );
+                    JOptionPane.showMessageDialog(TelaCustoPanel.this, "Erro ao buscar custos: " + e.getMessage(), "Erro", JOptionPane.ERROR_MESSAGE);
                 }
             }
         }.execute();
     }
 
     private void salvar() {
-        if (txtImposto.getText().isBlank() || txtCustoVariavel.getText().isBlank() ||
-                txtCustoFixo.getText().isBlank() || txtMargemLucro.getText().isBlank() ||
-                txtDataProcessamento.getText().replace("_", "").trim().isEmpty()) {
-            JOptionPane.showMessageDialog(this, "Todos os campos são obrigatórios.", "Erro", JOptionPane.ERROR_MESSAGE);
+        if (txtCustoVariavel.getText().isBlank() || txtCustoFixo.getText().isBlank() ||
+                txtMargemLucro.getText().isBlank() || txtDataProcessamento.getText().replace("_", "").trim().isEmpty()) {
+            JOptionPane.showMessageDialog(this, "Todos os campos obrigatórios devem ser preenchidos.", "Erro", JOptionPane.ERROR_MESSAGE);
             return;
         }
 
         Long id = txtId.getText().isEmpty() ? null : Long.valueOf(txtId.getText());
 
         new SwingWorker<Void, Void>() {
-            @Override
-            protected Void doInBackground() throws Exception {
-                Double imposto, custoVariavel, custoFixo, margemLucro;
+            @Override protected Void doInBackground() {
                 try {
-                    imposto = Double.parseDouble(txtImposto.getText().trim().replace(",", "."));
-                    custoVariavel = Double.parseDouble(txtCustoVariavel.getText().trim().replace(",", "."));
-                    custoFixo = Double.parseDouble(txtCustoFixo.getText().trim().replace(",", "."));
-                    margemLucro = Double.parseDouble(txtMargemLucro.getText().trim().replace(",", "."));
-                } catch (Exception ex) {
-                    throw new RuntimeException("Valores numéricos inválidos");
-                }
+                    double custoVariavel = Double.parseDouble(txtCustoVariavel.getText().replace(",", "."));
+                    double custoFixo = Double.parseDouble(txtCustoFixo.getText().replace(",", "."));
+                    double margem = Double.parseDouble(txtMargemLucro.getText().replace(",", "."));
+                    double imposto = margem > 0 ? 0.15 : 0.0;
 
-                CustoRequest req = new CustoRequest(
-                        imposto,
-                        custoVariavel,
-                        custoFixo,
-                        margemLucro,
-                        java.sql.Date.valueOf(
-                                java.time.LocalDate.parse(txtDataProcessamento.getText(), DateTimeFormatter.ofPattern("dd/MM/yyyy"))
-                        )
-                );
+                    CustoRequest req = new CustoRequest(
+                            imposto,
+                            custoVariavel,
+                            custoFixo,
+                            margem,
+                            java.sql.Date.valueOf(java.time.LocalDate.parse(txtDataProcessamento.getText(), DateTimeFormatter.ofPattern("dd/MM/yyyy")))
+                    );
 
-                if (id == null) {
-                    custoService.create(req);
-                } else {
-                    custoService.update(id, req);
+                    if (id == null) custoService.create(req);
+                    else custoService.update(id, req);
+
+                } catch (Exception e) {
+                    throw new RuntimeException("Erro ao salvar: " + e.getMessage());
                 }
                 return null;
             }
 
-            @Override
-            protected void done() {
+            @Override protected void done() {
                 try {
                     get();
                     JOptionPane.showMessageDialog(TelaCustoPanel.this, "Custo salvo com sucesso!", "Sucesso", JOptionPane.INFORMATION_MESSAGE);
                     limparFormulario();
                     atualizarTabela();
                 } catch (Exception e) {
-                    JOptionPane.showMessageDialog(TelaCustoPanel.this, "Erro ao salvar: " + e.getMessage(), "Erro", JOptionPane.ERROR_MESSAGE);
+                    JOptionPane.showMessageDialog(TelaCustoPanel.this, e.getMessage(), "Erro", JOptionPane.ERROR_MESSAGE);
                 }
             }
         }.execute();
     }
 
     private void excluir() {
-        if (table.getSelectedRow() < 0) {
+        int row = table.getSelectedRow();
+        if (row < 0) {
             JOptionPane.showMessageDialog(this, "Selecione um custo para excluir.", "Aviso", JOptionPane.WARNING_MESSAGE);
             return;
         }
 
-        int confirm = JOptionPane.showConfirmDialog(this, "Tem certeza que deseja excluir?", "Confirmar", JOptionPane.YES_NO_OPTION);
-        if (confirm == JOptionPane.YES_OPTION) {
-            Long id = (Long) tableModel.getValueAt(table.getSelectedRow(), 0);
-
+        Long id = (Long) tableModel.getValueAt(row, 0);
+        if (JOptionPane.showConfirmDialog(this, "Excluir este registro?", "Confirmar", JOptionPane.YES_NO_OPTION) == JOptionPane.YES_OPTION) {
             new SwingWorker<Void, Void>() {
-                @Override
-                protected Void doInBackground() throws Exception {
-                    custoService.delete(id);
-                    return null;
-                }
-
-                @Override
-                protected void done() {
-                    try {
-                        get();
-                        JOptionPane.showMessageDialog(TelaCustoPanel.this, "Custo excluído!", "Sucesso", JOptionPane.INFORMATION_MESSAGE);
-                        limparFormulario();
-                        atualizarTabela();
-                    } catch (Exception e) {
-                        JOptionPane.showMessageDialog(TelaCustoPanel.this, "Erro ao excluir: " + e.getMessage(), "Erro", JOptionPane.ERROR_MESSAGE);
-                    }
+                @Override protected Void doInBackground() { custoService.delete(id); return null; }
+                @Override protected void done() {
+                    JOptionPane.showMessageDialog(TelaCustoPanel.this, "Excluído com sucesso!", "Sucesso", JOptionPane.INFORMATION_MESSAGE);
+                    atualizarTabela();
                 }
             }.execute();
         }
     }
 
-    private void preencherFormulario() {
-        int row = table.getSelectedRow();
-        if (row >= 0) {
-            txtId.setText(tableModel.getValueAt(row, 0).toString());
-            txtImposto.setText(tableModel.getValueAt(row, 1).toString());
-            txtCustoVariavel.setText(tableModel.getValueAt(row, 2).toString());
-            txtCustoFixo.setText(tableModel.getValueAt(row, 3).toString());
-            txtMargemLucro.setText(tableModel.getValueAt(row, 4).toString());
-
-            Object dt = tableModel.getValueAt(row, 5);
-            if (dt instanceof java.util.Date) {
-                txtDataProcessamento.setValue(dt);
-            } else if (dt != null) {
-                txtDataProcessamento.setText(dt.toString());
-            } else {
-                txtDataProcessamento.setText("");
-            }
-        }
-    }
-
     private void limparFormulario() {
         txtId.setText("");
-        txtImposto.setText("");
+        txtImposto.setText("15%");
         txtCustoVariavel.setText("");
         txtCustoFixo.setText("");
         txtMargemLucro.setText("");
         txtDataProcessamento.setText("");
+        txtImposto.setForeground(new Color(0, 102, 0));
         table.clearSelection();
     }
 }
